--- a/alumni_net/requirements.txt
+++ b/alumni_net/requirements.txt
@@ -1,21 +1,25 @@
 # Core packages
-pandas==2.0.3
-numpy==1.24.3
-scikit-learn==1.3.0
+numpy>=1.24.0,<2.0.0
+pandas>=2.0.0,<2.1.0
+scikit-learn>=1.3.0,<1.4.0
 
 # NLP packages
-spacy==3.6.0
-sentence-transformers==2.2.2
-nltk==3.8.1
+sentence-transformers>=2.2.2,<3.0.0
+spacy>=3.7.0,<3.8.0
+nltk>=3.8.1
+
+# Dependencies for spacy (compatible versions)
+typer>=0.9.0,<0.10.0
+click>=8.1.0,<8.2.0
 
 # Recommendation system
-faiss-cpu==1.7.4
+faiss-cpu>=1.7.4
 
-# Explainable AI
-shap==0.42.1
-lime==0.2.0.1
+# Explainable AI (optional - can comment out if causing issues)
+# shap==0.42.1
+# lime==0.2.0.1
 
 # Utilities
-python-dotenv==1.0.0
-tabulate==0.9.0
-colorama==0.4.6
+python-dotenv>=1.0.0
+tabulate>=0.9.0
+colorama>=0.4.6
